<resources>
    <string name="www_st_com">www.st.com</string>
    <string name="st25_nfc_tags_and_readers">ST25 NFC RFID\nTags &amp; Readers</string>
    <string name="st_uri">st.com</string>
    <string name="st_andef_uri">myst25.com/andef/index.php</string>
    <string name="app_description">
        ST25 NFC Tap App is an Android application dedicated to handle the ST NFC tag ST25TA (CLOUD ST25TA02K-P), the dynamic NFC tag M24SR (M24SR Nucleo shield and M24SR Discovery boards), the Dual Interface EEPROMs of the M24LRxx family, the ST25TV series and the ST25DV series Dynamic NFC Tags. \n\nIt allows the user to store or read NDEF messages such as NDEF URL, SMS, Email, vCard (including picture), AAR and proprietary messages. NDEF Multi-records is also available. \n\nSpecific demonstration features such as FW update, image transfers are available and work with specific firmware and Discovery kits. \n</string>
    <string name="about">About</string>
    <string name="version_dialog_header">App version description</string>
    <string name="preferred_app">Preferred App.</string>
    <string name="preferred_applications">Preferred Applications</string>
    <string name="preferred_application_description">List of \'preferred applications\' associated to system actions.\n\nClick on Edit icon if you want to remove an association. When the action occurs, if no more preferred application is associated to this action, Android will display a popup asking the user to choose what to do.</string>
    <string name="show_only_nfc_actions">Show only NFC actions</string>
    <string name="show_all_actions">Show all actions</string>
    <string name="action">Action</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="warning">Warning</string>
    <string name="continue_message">Continue</string>
    <string name="not_implemented_yet">Not implemented yet!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="product_unknown">Product unknown</string>
    <string name="product_version">Product version</string>
    <string name="action_settings">Settings</string>
    <string name="please_tap_a_nfc_tag">Please tap an NFC tag...</string>
    <string name="aiddescription">aiddescription</string>
    <string name="servicedesc">servicedesc</string>
    <string name="ndef">NDEF</string>
    <string name="ndef_details">NDEF details</string>
    <string name="no_ndef_data_or_unknown_data">No NDEF data or unknown data</string>
    <string name="unknown_data">Unknown data</string>
    <string name="area_protected_in_read">Area protected in read</string>
    <string name="area_protected_in_read_click_here_to_unlock">Area protected in read. Click here to unlock it.</string>
    <string name="error_while_reading_the_area">Error while reading the area</string>
    <string name="error_no_password_interface">Error! This tag doesn\'t have a password interface!</string>
    <string name="cc_file">CC File</string>
    <string name="system_file">System File</string>
    <string name="system_file_length">System file length</string>
    <string name="tools">Tools</string>
    <string name="memory">Memory</string>
    <string name="memory_content">Memory Content</string>
    <string name="configuration">Configuration</string>
    <string name="area_security_status">Area Security Status</string>
    <string name="storage_format_id">Storage Format ID</string>
    <string name="nfc_forum">NFC Forum</string>
    <string name="ndef_editor">NDEF Editor</string>
    <string name="areas_content_editor">Areas Content Editor</string>
    <string name="tag_info">Tag Info</string>
    <string name="product_features">Product Features</string>
    <string name="cc_file_length_title">CC File Length</string>
    <string name="lri_menus">LRi menus</string>
    <string name="lriS2k_menus">LRiS2k menus</string>
    <string name="lriS64k_menus">LRiS64k menus</string>
    <string name="st25tv_menus">ST25TV menus</string>
    <string name="st25dv02kw_menus">ST25DV02K-W menus</string>
    <string name="st25tv64k_menus">ST25TV64K menus</string>
    <string name="m24sr64_menus">M24sr64 menus</string>
    <string name="m24lr64_menus">M24lr64 menus</string>
    <string name="m24lr04_menus">M24lr04 menus</string>
    <string name="st25ta_menus">ST25ta menus</string>
    <string name="type5_menus">Type5 menus</string>
    <string name="type4_menus">Type4 menus</string>
    <string name="iso15693_menus">ISO15693 menus</string>
    <string name="pwm_access_rights">PWM R/W access rights</string>
    <string name="pwm_control_config">PWM Ctrl config</string>
    <string name="pwm1Drive">PWM1 Drive</string>
    <string name="pwm2Drive">PWM2 Drive</string>
    <string name="select_pwm_output_trimming">Select output driver trimming</string>
    <string name="select_pwm_duality_management">Select pwm duality management</string>
    <string name="select_pwm">Select pwm drive</string>
    <string name="full_power">Full power</string>
    <string name="half_power">Half power</string>
    <string name="one_quarter_power">One quarter power</string>
    <string name="three_quarter_power">Three quarter power</string>
    <string name="trimming_value">Trimming value</string>
    <string name="change_pwm_drive_configuration">Change pwm drive configuration</string>
    <string name="change_duality_management">Change pwm duality management</string>
    <string name="pwm_slider_frequency_info_min">489Hz[0]</string>
    <string name="pwm_slider_frequency_info_max">31250Hz[100]</string>
    <string name="pwm_range_frequency_info"> [489-31250]Hz</string>
    <string name="pwm_slider_duty_cycle_info_min">Duty cycle[0%]</string>
    <string name="pwm_slider_duty_cycle_info_max">Duty cycle[100%]</string>
    <string name="pwm_range_duty_cycle_info">[0-100]%</string>
    <string name="pwm_name1">PWM1</string>
    <string name="pwm_name2">PWM2</string>
    <string name="pwm_resolution_value">62.5</string>
    <string name="pwm_frequency_name">Freq</string>
    <string name="pwm_duty_cycle_name">Duty Cycle</string>
    <string name="pwm_pulse_width_name">Pulse W</string>
    <string name="pwm_period_name">Period</string>
    <string name="pwm_no_name">X</string>
    <string name="pwm_low_default_freq_value">0</string>
    <string name="pwm_high_default_freq_value">500</string>
    <string name="pwm_default_duty_cycle_value">50</string>
    <string name="pwm_not_enabled_warning">PWM1 and/or PWM2 is not enabled or set with an invalid frequency. Do you want to enable them with default values?</string>
    <string name="pwm_failed_to_read_pwm_settings">Failed to read PWM settings</string>
    <string name="full_duplex">Full duplex</string>
    <string name="freq_reduced">Frequency reduced</string>
    <string name="pwm_set_in_hz_while_rf_cmd">PWM set in HiZ during RF cmds</string>
    <string name="one_quarter_full_power_while_rf_cmd">PWM at 25% of full power during RF cmds</string>
    <string name="freq_reduced_and_one_quarter_full_power_while_rf_cmd">Frequency reduced and PWM at 25% of full power during RF cmds</string>
    <string name="access_rights">Access rights</string>
    <string name="area_security_status_management">Areas Security Status</string>
    <string name="security_status_management">Security Status</string>
    <string name="passwd_management">Password Management</string>
    <string name="password">Password%1$d</string>
    <string name="enter_password">Enter current password </string>
    <string name="enter_new_password">Enter new password</string>
    <string name="passwordless">No Password </string>
    <string name="password1">Password 1</string>
    <string name="password2">Password 2</string>
    <string name="password3">Password 3</string>
    <string name="enter_read_password">Enter read password</string>
    <string name="enter_write_password">Enter write password</string>
    <string name="enter_new_read_password">Enter new read password</string>
    <string name="enter_new_write_password">Enter new write password</string>
    <string name="area_management">Areas Management</string>
    <string name="sector_management">Sector Management</string>
    <string name="value_of_the_current_sector"> Value of the current sector</string>
    <string name="memory_test">Memory tests</string>
    <string name="unknown_tag">Tag unknown</string>
    <string name="no_tag">No tag detected</string>
    <string name="unknown_state">State unknown</string>
    <string name="read_lock">Read lock</string>
    <string name="write_lock">Write lock</string>
    <string name="read_unlock">Read unlock</string>
    <string name="write_unlock">Write unlock</string>
    <string name="write_lock_permanent">Write lock permanently</string>
    <string name="permanent_lock">Permanent lock</string>
    <string name="change_read_pwd">Change read password</string>
    <string name="change_write_pwd">Change write password</string>
    <string name="present_read_pwd">Present read password</string>
    <string name="present_write_pwd">Present write password</string>
    <string name="present_config_pwd">Present configuration password</string>
    <string name="change_config_pwd">Change configuration password</string>
    <string name="lock_configuration">Lock configuration</string>
    <string name="select_an_action">Select an action:</string>
    <string name="edit_ndef_record">Edit this NDEF Record</string>
    <string name="delete_ndef_record">Delete this NDEF Record</string>
    <string name="insert_ndef_record">Insert a NDEF Record</string>
    <string name="update_ndef_record">Update this NDEF Record</string>
    <string name="zones_viewer">Zones viewer</string>
    <string name="ndefs_viewer">NDEF(s) viewer</string>
    <string name="model_description">Model Description</string>
    <string name="model_type">Model Type</string>
    <string name="st25dv_menus">ST25DV menus</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="manufacturer2">Manufacturer:</string>
    <string name="Memory_size">Memory size (bytes):</string>
    <string name="Mapping_Version">Mapping Version : </string>
    <string name="kill_tag">Kill Tag</string>
    <string name="Mailbox_management">Mailbox Management</string>
    <string name="Value">Value</string>
    <string name="Range">Range</string>
    <string name="dynamic_register_management">Dyn Register Management</string>
    <string name="register_management">Register Management</string>
    <string name="configuration_protection">Configuration Protection</string>
    <string name="filled_at_runtime">Filled at runtime</string>
    <string name="menu_st25dv_features">ST25DV Features</string>
    <string name="menu_st25dv_demonstrations">ST25DV Demonstrations</string>
    <string name="url_www_st_com_st25">www.st.com/st25-demo</string>
    <string name="frequency_max">Freq Max</string>
    <string name="frequency_min">Freq Min</string>
    <string name="config_frequency_range">Config frequency range</string>
    <string name="on"> ON </string>
    <string name="off"> OFF </string>
    <string name="speed">SPEED</string>
    <string name="direction">DIRECTION</string>
    <string name="motor">MOTOR</string>
    <string name="hide_frequency_configuration">Hide Frequency config</string>
    <string name="augmented_ndef">Augmented NDEF</string>
    <string name="send_custom_cmd">Send Custom command</string>
    <string name="menu_st25tn_features">ST25TN Features</string>
    <string name="locks">Locks</string>
    <string name="ftm_demos">FTM demos</string>
    <string name="stop_watch_demo">Stopwatch demo</string>
    <string name="app_launcher">App launcher</string>
</resources>