<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/menu_st25dv_features"
        android:id="@+id/st25dv_features">
        <menu>
            <item
                android:id="@+id/sys_file"
                android:icon="@drawable/ic_perm_data_setting_black_24dp"
                android:title="@string/system_file"/>
            <item
                android:id="@+id/memory_dump"
                android:icon="@drawable/ic_memory_black_24dp"
                android:title="@string/memory_content"/>
            <item
                android:id="@+id/register_management"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/register_management"/>
            <item
                android:id="@+id/dynamic_register_management"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/dynamic_register_management"/>
            <item
                android:id="@+id/configuration_protection"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/configuration_protection"/>
            <item
                android:id="@+id/configuration"
                android:icon="@drawable/ic_memory_black_24dp"
                android:title="@string/area_management"/>
            <item
                android:id="@+id/areas_ndef_editor"
                android:icon="@drawable/ic_playlist_play_black_24dp"
                android:title="@string/areas_content_editor" />
            <item
                android:id="@+id/area_security_status_management"
                android:icon="@drawable/ic_security_black_24dp"
                android:title="@string/area_security_status_management"/>
            <item
                android:id="@+id/send_custom_cmd"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_custom_cmd"/>
            <item
                android:id="@+id/mailbox_management"
                android:icon="@drawable/ic_markunread_mailbox_black_24dp"
                android:title="@string/Mailbox_management"/>
            <item
                android:id="@+id/app_launcher"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/app_launcher"/>
        </menu>
    </item>

    <item android:title="@string/menu_st25dv_demonstrations"
        android:id="@+id/st25dv_demonstrations">
        <menu>
            <item
                android:id="@+id/ftm_demos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/ftm_demos"
                />
            <item
                android:id="@+id/stopwatch_demo"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/stop_watch_demo"
                />
        </menu>
    </item>

</menu>
