<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/versionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <ImageView
            android:id="@+id/versionImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_st25_transp"
            android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/versionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Mapping_Version"
                    android:textColor="@color/st_dark_blue"/>

                <TextView
                    android:id="@+id/featuresTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Features states"
                    android:textColor="@color/st_dark_blue"/>

                <TextView
                    android:id="@+id/urlTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:autoLink="web"
                    android:textSize="15dp"
                    android:text="@string/url_www_st_com_st25"/>

            </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/versionLinearLayout">

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/st_dark_blue"
            android:text="@string/filled_at_runtime" />
    </ScrollView>

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/light_grey_round_area"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ok" />

</RelativeLayout>